# Roguelike

./: CMakeLists.txt
.cache/clangd/index/: Core.cpp.23D64EC1A4F4C7E6.idx  Triangle.cpp.A9FFE5E5555B17A2.idx  Triangle.h.E4ED04E61D7546EC.idx  Window.h.070390C037C92E73.idx
src/: CMakeLists.txt  PathConfig.hpp  PathConfig.hpp.in  main.cpp
src/Assets/Shader/: Shader.cpp  Shader.h  fragment.glsl  vertex.glsl
src/Assets/Texture/: Texture.cpp  Texture.h
src/Camera/: Camera.cpp  Camera.h
src/Core/: CMakeLists.txt  Core.cpp  Core.h  Game.cpp  Game.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Window.cpp  Window.h
src/Core/Figures/Triangle/: Triangle.cpp  Triangle.h
src/Core/Keyboard/: Keyboard.cpp  Keyboard.h
src/Core/Screen/: Screen.cpp  Screen.h
src/Core/Window/: Window.cpp  Window.h
src/Core/Window/Figures/: Figure.cpp  Figure.h
src/Core/Window/Figures/Figure/: Figure.cpp  Figure.h
src/Core/Window/Figures/Rectangle/: Rectangle.cpp  Rectangle.h
src/Core/Window/Figures/Triangle/: Triangle.cpp  Triangle.h
src/Core/Window/Renderer/: Renderer.cpp  Renderer.h
src/Core/Window/Scene/: Scene.cpp  Scene.h
src/Core/Window/Shader/: Shader.cpp  Shader.h  fragment.glsl  vertex.glsl
src/Core/Window/Shader/shaders/: fragment.glsl  vertex.glsl
src/Entities/: CMakeLists.txt  Entity.cpp  Entity.h
src/Entities/EntitiesManager/: EntitiesManager.cpp  EntitiesManager.h
src/Entities/EntityManager/: EntityManager.cpp  EntityManager.h
src/Entities/Player/: Player.cpp  Player.h
src/Figures/: Figure.cpp  Figure.h
src/Figures/Rectangle/: Rectangle.cpp  Rectangle.h
src/Input/: Input.cpp  Input.h
src/Map/: CMakeLists.txt  Map.cpp  Map.h  Minimap.cpp  Minimap.h
src/ObjectsManager/: ObjectsManager.cpp  ObjectsManager.h
src/Types/: Object.h  Types.h
src/Utils/: CMakeLists.txt  Collision.cpp  Collision.h  RoomsMovement.cpp  RoomsMovement.h  Utils.cpp  Utils.h
